--- a/main.html
+++ b/main.html
@@ -4,13 +4,35 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1>kedarnath temple</h1><br>
+	
+	<p>
+		kedarnath is one of the 12 jyotirling
+	</p>
+ <ol>
+	 <li><b><kedarnath </b></li>
+	 <li><b>badrinath </b></li>
+	 <li></li><b>vasuki tal</b></li>
+	 <li><b>sonprayag</b></li>
+	 <li><b>gaurikund</b><li>
+ </ol>
+		 <ul>
+			 <li><b><i>poli</i></b></li>
+			  <li><b><i>bhaji</i></b></li>
+			  <li><b><i>bhat</i></b></li>
+			  <li><b><i>varan</i></b></li>
+			  <li><b><i>sweet</i></b></li>
+		 </ul>
+		 <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
 </html>
+			 
+		 
